package com.springboot.MyTodoList.web.security;

import com.springboot.MyTodoList.web.auth.filters.JwtFilter;
import com.springboot.MyTodoList.web.auth.jwt.JwtUtil;
import com.springboot.MyTodoList.web.auth.oci.OciOidcUserService;
import com.springboot.MyTodoList.web.features.user.userDetails.CustomUserDetails;
import lombok.RequiredArgsConstructor;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import org.springframework.security.config.Customizer;
import org.springframework.security.config.annotation.web.builders.HttpSecurity;
import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
import org.springframework.security.oauth2.client.oidc.web.logout.OidcClientInitiatedLogoutSuccessHandler;
import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
import org.springframework.security.oauth2.client.registration.InMemoryClientRegistrationRepository;
import org.springframework.security.web.SecurityFilterChain;
import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
import org.springframework.security.web.authentication.logout.LogoutSuccessHandler;


@Configuration
@EnableWebSecurity
@RequiredArgsConstructor
public class WebSecurityConfiguration {

    private final OciOidcUserService ociOidcUserService; // Your existing service
    private final JwtUtil jwtUtil; // Your JwtUtil

    @Value("${app.base-url}")
    private String redirectBaseUrl;

    @Value("${app.frontend-url}")
    private String frontendUrl;

    @Bean
    public WebSecurityCustomizer webSecurityCustomizer() {
        return (web) -> web.ignoring().requestMatchers(
                "/index.html",
                "/assets/**",
                "/static/**",
                "/*.js",
                "/*.css",
                "/*.ico",
                "/*.png",
                "/*.svg"
        );
    }

    @Bean
    public SecurityFilterChain securityFilterChain(HttpSecurity http, JwtFilter jwtFilter, InMemoryClientRegistrationRepository clientRegistrationRepository) throws Exception {
        http
                .cors(Customizer.withDefaults())
                .csrf(AbstractHttpConfigurer::disable)

                .authorizeHttpRequests(auth -> auth
                        .requestMatchers("/", "/login**", "/error**", "/oauth2/**").permitAll()
                        .requestMatchers("/api/dashboard/summary/all").permitAll()
                        // Telegram bot calls these without a browser session or JWT
                        .requestMatchers("/api/summary-jobs", "/api/summary-jobs/**", "/api/tasks", "/api/tasks/**", "/api/users/telegram/**", "/api/sprints", "/api/sprints/**", "/api/teams", "/api/teams/**","/api/ai/**").permitAll()
                        .anyRequest().authenticated())

                .oauth2Login(oauth -> oauth.
                        userInfoEndpoint(userInfo -> userInfo
                                .oidcUserService(ociOidcUserService))
                        .successHandler((request, response, authentication) -> {
                            // 1. Get the user from the authentication object
                            CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();

                            // 2. Generate internal JWT using your JwtUtil
                            String token = jwtUtil.generateAccessToken(userDetails.getUsername());

                            // 3. Redirect to Vite with the token in the query string
                            // Your React app should catch this in the URL
                            response.sendRedirect(frontendUrl + "/oauth2/redirect?token=" + token);
                        }))
                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                .logout(logout -> logout
                        .logoutSuccessHandler(oidcLogoutSuccessHandler(clientRegistrationRepository))
                        .invalidateHttpSession(true)
                        .clearAuthentication(true)
                        .deleteCookies("JSESSIONID")
                );


        return http.build();
    }

    private LogoutSuccessHandler oidcLogoutSuccessHandler(ClientRegistrationRepository clientRegistrationRepository) {
        OidcClientInitiatedLogoutSuccessHandler oidcLogoutSuccessHandler =
                new OidcClientInitiatedLogoutSuccessHandler(clientRegistrationRepository);

        // After Oracle logs the user out, where should they go?
        // This URL must be registered in your OCI Console as a "Post-Logout Redirect URI"
        oidcLogoutSuccessHandler.setPostLogoutRedirectUri(redirectBaseUrl + "/login");

        return oidcLogoutSuccessHandler;
    }
}
